Correccion de Clases y creacion del Menu en Main