@@ -19,62 +19,52 @@ public class Gestor<T extends Claveable> {
 
 
     public T buscarPorClave(String clave) {
-        if (clave == null || clave.isBlank()) return null;
-
+        if (clave == null || clave.trim().isEmpty()) return null;
         String k = clave.trim();
-        for (T e : lista) {
-            if (e.getClave() != null && e.getClave().equals(k)) {
-                return e;    // actua como un true SI LO ENCONTRO
+        for (int i = 0; i < lista.size(); i++) {
+            T e = lista.get(i);
+            if (e.getClave() != null && e.getClave().equalsIgnoreCase(k)) {
+                return e;
             }
         }
-        return null;   // actua como un false, que indica que no lo encontro dentro la lista
+        return null;
     }
 
     //agregar entidad
-    public void agregar (T entidad) throws DatoInvalidoException {
-        if (entidad == null) {
-            throw new DatoInvalidoException("El dato ingresado es invalido");
-        }
-        String claveEntidad = entidad.getClave();
-        if (claveEntidad == null || claveEntidad.isBlank()) {
-            throw new DatoInvalidoException("El dato ingresado es invalido");
-        }
-        if (buscarPorClave(claveEntidad) != null) {
-            throw new DatoInvalidoException("Ya existe ese dato ");
-        }
+    public void agregar(T entidad) throws DatoInvalidoException {
+        if (entidad == null) throw new DatoInvalidoException("Entidad nula");
+        String clave = entidad.getClave();
+        if (clave == null || clave.trim().isEmpty())
+            throw new DatoInvalidoException("Clave inválida");
+        if (buscarPorClave(clave) != null)
+            throw new DatoInvalidoException("Duplicado: ya existe clave " + clave);
         lista.add(entidad);
-
     }
-
 
 
     // Eliminar por clave (equivale a tu eliminarSocioPorDni)
-    public void eliminarPorClave(String clave) throws UsuarioInvalidoException {
-        if (clave == null || clave.isBlank()) {
-            throw new UsuarioInvalidoException("Debe ingresar una clave válida...");
-        }
-        T encontrada = buscarPorClave(clave);
-        if (encontrada == null) {
-            throw new UsuarioInvalidoException("No se encontró entidad con esa clave.");
-        }
-        lista.remove(encontrada);
-        System.out.println("Entidad eliminada correctamente");
-    }
-
-
-    //listar entidades
-        // Listado genérico (similar a tu listarSocios)
-        public void listar() {
-            if (lista.isEmpty()) {
-                System.out.println("La lista esta vacia");
-            } else {
-                System.out.println("LISTA:");
-                for (T e : lista) System.out.println("- " + e);
+    public boolean eliminarPorClave(String clave) {
+        if (clave == null) return false;
+        for (int i = 0; i < lista.size(); i++) {
+            if (clave.equalsIgnoreCase(lista.get(i).getClave())) {
+                lista.remove(i);
+                return true;
             }
         }
-
-
+        return false;
     }
+
+    //listar entidades
+    public List<T> listar() {
+        return new ArrayList<T>(lista); // copia defensiva
+    }
+
+    public int cantidad() {
+        return lista.size();
+    }
+
+}
+
 
 
 
